Basic tile rendering

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
     <img id="tile_city" src="assets/tile_city.png">
     <img id="border_overlay" src="assets/border_overlay.png">
     <canvas id="canvas" width="480" height="360"></canvas>
+    <script src="world.js"></script>
+    <script src="camera.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
