--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
     <img id="tile_mountain" src="assets/tile_mountain.png">
     <img id="tile_city" src="assets/tile_city.png">
     <img id="border_overlay" src="assets/border_overlay.png">
+    <img id="selector" src="assets/selector.png">
     <canvas id="canvas" width="480" height="360"></canvas>
     <script src="world.js"></script>
     <script src="camera.js"></script>
