Setup web sockets

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,8 @@
     <img id="border_overlay" src="assets/border_overlay.png">
     <img id="selector" src="assets/selector.png">
     <canvas id="canvas" width="480" height="360"></canvas>
+    <script src="units.js"></script>
+    <script src="player.js"></script>
     <script src="world.js"></script>
     <script src="camera.js"></script>
     <script src="app.js"></script>
