--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
   </head>
   <body>
     <img id="tile_plains" src="assets/tile_plains.png">
@@ -13,7 +13,10 @@
     <img id="tile_city" src="assets/tile_city.png">
     <img id="border_overlay" src="assets/border_overlay.png">
     <img id="selector" src="assets/selector.png">
+
     <canvas id="canvas" width="480" height="360"></canvas>
+    <div class="test" id="UI"></div>
+
     <script src="units.js"></script>
     <script src="player.js"></script>
     <script src="world.js"></script>
