Added unit rendering

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,11 @@
     <img id="tile_mountain" src="assets/tile_mountain.png">
     <img id="tile_city" src="assets/tile_city.png">
     <img id="border_overlay" src="assets/border_overlay.png">
+
     <img id="selector" src="assets/selector.png">
+
+    <img id="unit_settler" src="assets/unit_settler.png">
+    <img id="unit_scout" src="assets/unit_scout.png">
 
     <canvas id="canvas" width="480" height="360"></canvas>
     <div class="test" id="UI"></div>
